# SlashGaming-Diablo-II-Free-Resolution

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
SGD2FreeResolution/: CMakeLists.txt
SGD2FreeResolution/include/: dllexport_define.inc
SGD2FreeResolution/src/: cel_file_config.c  cel_file_config.h  compile_time_switch.h  compile_time_switch.hpp  config.c  config.cc  config.h  config.hpp  dll_main.cc  sgd2fml_mod_exports.cc  sgd2mapi_extension.h  sgd2mapi_extension.hpp  user_config.c  user_config.h
SGD2FreeResolution/src/cel_file/: cel_file_interface_bar.c  cel_file_interface_bar.h  cel_file_interface_bar_background.c  cel_file_interface_bar_background.h  cel_file_legacy.c  cel_file_legacy.h  cel_file_life_orb.c  cel_file_life_orb.h  cel_file_mana_orb.c  cel_file_mana_orb.h  cel_file_screen_background.c  cel_file_screen_background.h  cel_file_screen_background_border.c  cel_file_screen_background_border.h  cel_file_screen_border.c  cel_file_screen_border.h
SGD2FreeResolution/src/cel_file_config/: cel_file_config_draw_setting.h  cel_file_config_json_frozen.h  cel_file_config_json_key.h  cel_file_config_struct.c  cel_file_config_struct.h  cel_file_config_value_default.h
SGD2FreeResolution/src/cel_file_draw/: draw_cel_file.h
SGD2FreeResolution/src/config/: config_ini.h  config_ini_read.cpp  config_ini_windows.h  config_ini_windows_read.c  config_ini_windows_read.cpp  config_ini_windows_write.c  config_ini_write.c  config_json_frozen.h  config_json_frozen_read.c  config_json_frozen_read.cpp  config_json_frozen_write.c  config_json_key_value.h  config_key_value.h  config_struct.c  config_struct.h  config_struct.hpp  config_value_default.h
SGD2FreeResolution/src/game_resolution/: game_resolution.c  game_resolution.h  game_resolution.hpp  game_resolution_cxx.cc  game_resolution_gateway_ipv4.c  game_resolution_gateway_ipv4.h  game_resolution_global.c  game_resolution_global.cpp  game_resolution_global.h
SGD2FreeResolution/src/game_resolution/gateway/: game_resolution_d2lod_net.c  game_resolution_d2lod_net.h  game_resolution_diablo_09.c  game_resolution_diablo_09.h  game_resolution_project_diablo_2.c  game_resolution_project_diablo_2.h  game_resolution_resurgence.c  game_resolution_resurgence.h  game_resolution_slash_diablo.c  game_resolution_slash_diablo.h
SGD2FreeResolution/src/helper/: 800_interface_bar.cc  800_interface_bar.hpp  abstract_multiversion_patch.cpp  cel_file_collection.cc  cel_file_collection_asm.asm  custom_mpq.c  custom_mpq.cc  custom_mpq.h  game_resolution.cc  position_realignment.cc
SGD2FreeResolution/src/patches/draw/: draw_patches.hpp
SGD2FreeResolution/src/patches/draw/d2client_draw_interface_bar_background_patch/: d2client_draw_interface_bar_background.c  d2client_draw_interface_bar_background.cc  d2client_draw_interface_bar_background.h  d2client_draw_interface_bar_background.hpp  d2client_draw_interface_bar_background_patch.cc  d2client_draw_interface_bar_background_patch.hpp  d2client_draw_interface_bar_background_patch_1_09d.cc  d2client_draw_interface_bar_background_patch_1_09d.hpp  d2client_draw_interface_bar_background_patch_lod_1_14c.cpp  d2client_draw_interface_bar_background_patch_lod_1_14c.hpp  d2client_draw_interface_bar_background_patch_lod_1_14d.cpp  d2client_draw_interface_bar_background_patch_lod_1_14d_shim.asm
SGD2FreeResolution/src/patches/draw/d2client_draw_screen_background_patch/: d2client_draw_screen_background.cc  d2client_draw_screen_background.hpp  d2client_draw_screen_background_patch.cc  d2client_draw_screen_background_patch_1_09d.cc  d2client_draw_screen_background_patch_1_09d.hpp
SGD2FreeResolution/src/patches/interface_bar/d2client_enable_800_interface_bar_patch/: d2client_enable_800_interface_bar.cc  d2client_enable_800_interface_bar.hpp  d2client_enable_800_interface_bar_patch.cc  d2client_enable_800_interface_bar_patch_1_09d.cc  d2client_enable_800_interface_bar_patch_1_09d_shim.asm  d2client_enable_800_interface_bar_patch_1_13c.cc
SGD2FreeResolution/src/patches/interface_bar/d2client_enable_800_new_skill_button_patch/: d2client_enable_800_new_skill_button.cc  d2client_enable_800_new_skill_button.hpp  d2client_enable_800_new_skill_button_patch.cc  d2client_enable_800_new_skill_button_patch_1_09d.cc  d2client_enable_800_new_skill_button_patch_1_09d.hpp  d2client_enable_800_new_skill_button_patch_1_09d_shim.asm  d2client_enable_800_new_skill_button_patch_1_13c.cc  d2client_enable_800_new_skill_button_patch_1_13c_shim.asm
SGD2FreeResolution/src/patches/interface_bar/d2client_enable_800_new_stats_button_patch/: d2client_enable_800_new_stats_button.cc  d2client_enable_800_new_stats_button.hpp  (+4 more)
SGD2FreeResolution/src/sgd2mapi_extension/: ddraw_library.c  ddraw_library.h  ddraw_library.hpp  game_function.h  game_variable.h  glide3x_library.c  glide3x_library_cpp98.cpp  glide3x_library_version.hpp  glide3x_library_version_cpp98.cpp  sgd2mapi_extension.hpp
SGD2FreeResolution/src/sgd2mapi_extension/file/: file_content.c  file_content.h  file_version_info.c
SGD2FreeResolution/src/sgd2mapi_extension/game_function/: d2client_function.h  d2client_function.hpp
SGD2FreeResolution/src/sgd2mapi_extension/game_variable/: glide3x_variable.h
SGD2FreeResolution/src/sgd2mapi_extension/glide3x_library_d2dx/: glide3x_library_d2dx.c  glide3x_library_d2dx.h
SGD2FreeResolution/src/sgd2mapi_extension/glide3x_library_version/: glide3x_library_version_file_version.c
SGD2FreeResolution/src/user_config/: user_config_ini_windows.h  user_config_ini_windows_read.c  user_config_ini_windows_write.c  user_config_json_frozen.h  user_config_json_frozen_read.c  user_config_json_frozen_write.c  user_config_json_key_value.h  user_config_key_value.h  user_config_struct.c  user_config_struct.h  user_config_value_default.h
SlashGaming-Diablo-II-Free-Resolution/src/patches/required/: CMakeLists.txt  required_patches.cc  required_patches.hpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  dllapi_define.inc  dllapi_undef.inc  position.cpp  position.hpp  resolution.cpp  resolution.hpp
(+1064 files in other folders)
